# hansard-backend

./: .gitignore  README.md  pyproject.toml
src/: hansard_main.py  parse_many.py  parse_one.py  paths.py
src/hansard/: downloader.py  managers.py  nlp_subscribers.py  parser.py  services.py
src/hansard/entities/: speech.py  talker.py
src/hansard/events/: divisiveness_handler.py  eventlist.py  summary_handler.py  view_refresh_handler.py
src/hansard/nlp/: divisiveness.py  enums.py  preprocessing.py  services.py  summary.py
src/hansard/repositories/: part_repository.py  speech_stats_repository.py  talker_repository.py
src/hansard/views/: bill_overview.py
src/utils/: acache.py  background_tasks.py
src/utils/events/: base.py  local.py
test/hansard/: conftest.py  test_nlp_domain.py  test_parser.py  test_talker.py
test/hansard/_files/: test_hansard.xml  test_two_consecutive_bills.xml
