[project]
name = "augov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cachetools>=6.2.1",
    "gensim>=4.4.0",
    "httpx>=0.28.1",
    "huggingface>=0.0.1",
    "langchain>=1.0.3",
    "langchain-huggingface>=1.0.0",
    "lxml>=6.0.2",
    "markdownify>=1.2.0",
    "ollama>=0.6.0",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pip>=25.2",
    "pydantic>=2.11.9",
    "pymongo>=4.15.3",
    "selenium>=4.23.1",
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "tiktoken>=0.12.0",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "Q"]
ignore = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
